--- a/07_Milestone_Project_1_PyTorch_Experiment_Tracking.ipynb
+++ b/07_Milestone_Project_1_PyTorch_Experiment_Tracking.ipynb
@@ -470,13 +470,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jX8gH7hCBCZd",
-        "outputId": "704e8e1a-34e4-4c73-e8fb-7631c8e845da"
+        "outputId": "e5bfc2a6-9c69-4bdb-bb2d-c35e18054a37"
       },
       "outputs": [
         {
@@ -527,14 +527,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
         "id": "NQfGP7KkCTY9",
-        "outputId": "6f4ccc84-a5bf-4d23-e607-8d6470736669"
+        "outputId": "2ef5119c-db75-4877-dcdf-e4bb7265b0dd"
       },
       "outputs": [
         {
@@ -548,7 +548,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ],
       "source": [
@@ -572,22 +572,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "i4F7zoB3DG5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
         },
-        "outputId": "76b5ba5d-af33-455d-80c1-fe8c03cfb288"
+        "outputId": "6b3ade55-99a3-425c-fdd5-57ab1e7b76d6"
       },
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-4-60cd059455aa>, line 2)",
+          "evalue": "invalid syntax (<ipython-input-3-60cd059455aa>, line 2)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-60cd059455aa>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def set_seeds(seed: int:42):\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-60cd059455aa>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def set_seeds(seed: int:42):\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
@@ -628,22 +628,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "RPkCbCl0Dik6"
+        "id": "RPkCbCl0Dik6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c6947df7-2d98-4fc7-9821-80519933d78a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[INFO] Did not find data/pizza_steak_sushi directory, creating one...\n",
+            "[INFO] Downloading pizza_steak_sushi.zip from https://github.com/mrdbourke/pytorch-deep-learning/raw/main/data/pizza_steak_sushi.zip...\n",
+            "[INFO] Unzipping pizza_steak_sushi.zip data...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PosixPath('data/pizza_steak_sushi')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
       "source": [
-        "import os   #oprating system for the directory , file path and file location\n",
-        "import zipfile # for download data in form of zipfile\n",
+        "import os\n",
+        "import zipfile\n",
         "\n",
-        "from  pathlib import Path\n",
+        "from pathlib import Path\n",
+        "\n",
         "import requests\n",
         "\n",
         "def download_data(source: str,\n",
         "                  destination: str,\n",
-        "                  remove_source: bool =True) -> Path:\n",
-        "      \"\"\"Downloads a zipped dataset from source and unzips to destination.\n",
+        "                  remove_source: bool = True) -> Path:\n",
+        "    \"\"\"Downloads a zipped dataset from source and unzips to destination.\n",
         "\n",
         "    Args:\n",
         "        source (str): A link to a zipped file containing data.\n",
@@ -657,49 +682,45 @@
         "        download_data(source=\"https://github.com/mrdbourke/pytorch-deep-learning/raw/main/data/pizza_steak_sushi.zip\",\n",
         "                      destination=\"pizza_steak_sushi\")\n",
         "    \"\"\"\n",
-        "    # setup path to datafolder\n",
+        "    # Setup path to data folder\n",
         "    data_path = Path(\"data/\")\n",
         "    image_path = data_path / destination\n",
         "\n",
-        "    # if the image foldeer does'nt exist downalod it prepare it...\n",
+        "    # If the image folder doesn't exist, download it and prepare it...\n",
         "    if image_path.is_dir():\n",
-        "      print(f\"[INFO] {image_path} directory exist, skipping dowmloading...\")\n",
+        "        print(f\"[INFO] {image_path} directory exists, skipping download.\")\n",
         "    else:\n",
-        "      print(f\"[INFO] did not find{image_path} directory creating  one..\")\n",
-        "      image_path.mkdir(parents=True, exist_ok = True)\n",
+        "        print(f\"[INFO] Did not find {image_path} directory, creating one...\")\n",
+        "        image_path.mkdir(parents=True, exist_ok=True)\n",
         "\n",
+        "        # Download pizza, steak, sushi data\n",
+        "        target_file = Path(source).name\n",
+        "        with open(data_path / target_file, \"wb\") as f:\n",
+        "            request = requests.get(source)\n",
+        "            print(f\"[INFO] Downloading {target_file} from {source}...\")\n",
+        "            f.write(request.content)\n",
         "\n",
-        "      # dowmload pizza\n",
-        "      target_file = Path(source).name\n",
-        "      with open(data_path / target_file, \"wb\") as f:\n",
-        "        request = requests.get(source)\n",
-        "        print(f\"[INFO] Downloading {taget_file} from {source}...\")\n",
-        "        f.write(request.content)\n",
+        "        # Unzip pizza, steak, sushi data\n",
+        "        with zipfile.ZipFile(data_path / target_file, \"r\") as zip_ref:\n",
+        "            print(f\"[INFO] Unzipping {target_file} data...\")\n",
+        "            zip_ref.extractall(image_path)\n",
         "\n",
-        "        # Unzipp pizza , steak, susho data\n",
-        "        with zipfile.ZipFiile(data_path / target_file, \"r\") as zip_ref:\n",
-        "          print(f\"[INFO] Unzipping {target_file} data.....\")\n",
-        "          zip_ref.extractall(image_path)\n",
-        "\n",
-        "        # Remove .zip  file\n",
+        "        # Remove .zip file\n",
         "        if remove_source:\n",
-        "          os.remove(data_path / taget_file)\n",
+        "            os.remove(data_path / target_file)\n",
         "\n",
-        "return image_path\n",
+        "    return image_path\n",
         "\n",
         "image_path = download_data(source=\"https://github.com/mrdbourke/pytorch-deep-learning/raw/main/data/pizza_steak_sushi.zip\",\n",
         "                           destination=\"pizza_steak_sushi\")\n",
-        "image_path\n",
-        "\n",
-        "\n",
-        ""
+        "image_path"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "\n",
-        "###2. Create Datasets and DataLoaders\n",
+        "#2. Create Datasets and DataLoaders\n",
         "Now we've got some data, let's turn it into PyTorch DataLoaders.\n",
         "\n",
         "We can do so using the create_dataloaders() function we created in 05. PyTorch Going Modular part 2.\n",
@@ -708,10 +729,11 @@
         "\n",
         "To transform our images into tensors, we can use:\n",
         "\n",
-        "Manually created transforms using torchvision.transforms.\n",
-        "Automatically created transforms using torchvision.models.MODEL_NAME.MODEL_WEIGHTS.DEFAULT.transforms().\n",
-        "Where MODEL_NAME is a specific torchvision.models architecture, MODEL_WEIGHTS is a specific set of pretrained weights and DEFAULT means the \"best available weights\".\n",
-        "We saw an example of each of these in 06. PyTorch Transfer Learning section 2.\n",
+        "1. Manually created transforms using torchvision.transforms.\n",
+        "2. Automatically created transforms using\n",
+        " `torchvision.models.MODEL_NAME.MODEL_WEIGHTS.DEFAULT.transforms().`\n",
+        "  * Where `MODEL_NAME` is a specific `torchvision.models` architecture, `MODEL_WEIGHTS` is a specific set of pretrained weights and DEFAULT means the \"best available weights\".\n",
+        "We saw an example of each of these in `06. PyTorch Transfer Learning section 2`.\n",
         "\n",
         "Let's see first an example of manually creating a torchvision.transforms pipeline (creating a transforms pipeline this way gives the most customization but can potentially result in performance degradation if the transforms don't match the pretrained model).\n",
         "\n",
@@ -722,8 +744,51 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We can do this with:\n",
+        "\n",
+        " `normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+        "                                 std=[0.229, 0.224, 0.225])`"
+      ],
+      "metadata": {
+        "id": "vFPHG-h8FsXz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#2.1 Create DataLoaders using manually created transforms¶\n"
+      ],
+      "metadata": {
+        "id": "2UcETT1IFygD"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# setup directories\n",
+        "train_dir = image_path / \"train\"\n",
+        "test_dir = image_path / \"test\"\n",
+        "\n",
+        "# setup the ImageNet normalization levels (turns alll into smilatr distribution as image net)\n",
+        "transform.Normalize(mean=[0.485, 0.456, 0.406],\n",
+        "                    std=[0.229, 0.224, 0.225])\n",
+        "\n",
+        "# create a transform pipeline manually\n",
+        "manual_transform = transforms.Compose([transforms.Resize((224,224)),\n",
+        "                                       transforms.ToTensor,\n",
+        "                                       normalize])\n",
+        "\n",
+        "\n",
+        "print(f\"Manuallly created transforms: {manual_transform}\")\n",
+        "\n",
+        "# crated datalader loaders\n",
+        "train_dataloader, test_dataloader, cass_names, = data_setup.create_dataloaders(\n",
+        "\n",
+        ")\n",
+        "\n"
+      ],
       "metadata": {
         "id": "iMjF9x2SDRIb"
       },
@@ -736,7 +801,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyO83aHVTEJYp+lwECuV1Ssd",
+      "authorship_tag": "ABX9TyPtSRhf+yjD2qHhRI90OCqr",
       "include_colab_link": true
     },
     "kernelspec": {
